--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "material-design-icons-iconfont": "^6.4.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.14",
-    "vuex": "^4.0.2"                                
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -22,7 +22,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0"
   },
   "eslintConfig": {
     "root": true,
